CHEMH-251 | @jdwjdwjdw | Fixup overlapping news cards on mobile (#74)
* News card spacing fixup for mobile

* Safari spacing fixup

--- a/src/scss/components/news-vertical-teaser/_news-vertical-teaser.scss
+++ b/src/scss/components/news-vertical-teaser/_news-vertical-teaser.scss
@@ -205,6 +205,12 @@
 
       &.su-list-unstyled>li {
         @include centered-column;
+
+        margin-bottom: 4.5rem;
+
+        .su-news-vertical-teaser {
+          margin-bottom: 0;
+        }
       }
     }
 
